# cell-painting-anndata-validator

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: anndata-mapping.md  checks.md  cli.md  contributing.md  index.md  jump-cp-derivation.md  limitations.md  profile-levels.md  python-api.md  schemas.md
examples/: README.md  generate_examples.py
src/cp_anndata_validator/: __init__.py  api.py  loading.py  orchestrator.py  profiles.py  sampling.py  version.py
src/cp_anndata_validator/checks/: __init__.py  aggregation.py  ai_readiness.py  annotations.py  features.py  identifiers.py  matrix.py  metadata.py  profile_consistency.py  provenance.py  registry.py  schema_meta.py  structure.py
src/cp_anndata_validator/cli/: __init__.py  app.py
src/cp_anndata_validator/models/: __init__.py  issue.py  report.py
src/cp_anndata_validator/reporting/: __init__.py  (+3 more)
tests/: test_api.py  test_checks_aggregation.py  test_checks_ai_readiness.py  test_checks_annotations.py  test_checks_features.py  test_checks_identifiers.py  test_checks_matrix.py  test_checks_metadata.py  test_checks_profile_consistency.py  test_checks_provenance.py  test_checks_schema_meta.py  test_checks_structure.py  test_cli.py  test_loading.py  test_models.py  test_orchestrator.py  test_package.py  test_profiles.py  test_reporting_console.py  test_reporting_html.py  test_reporting_json.py  test_sampling.py  test_schema_loader.py  test_schema_resolution.py
tests/fixtures/: __init__.py  synthetic.py
(+9 files in other folders)
