[project]
name = "cp-anndata-validator"
version = "0.1.0"
description = "Validate the semantic correctness, metadata completeness, provenance and AI readiness of Cell Painting AnnData datasets."
readme = "README.md"
authors = [
    { name = "Ron Finn", email = "28505981+ronfinn@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.13.2",
    "jinja2>=3.1.6",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scipy>=1.18.0",
    "typer>=0.27.0",
]

[project.scripts]
cp-validate = "cp_anndata_validator.cli.app:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.12"
packages = ["cp_anndata_validator"]
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["anndata.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
